epix_add_module_subdir(epix_render render)
target_link_libraries(epix_render PUBLIC epix_core)
target_link_libraries(epix_render PUBLIC epix_window)
target_link_libraries(epix_render PUBLIC epix_assets)
target_link_libraries(epix_render PUBLIC epix_image)
target_link_libraries(epix_render PUBLIC epix_transform)
target_link_libraries(epix_render PUBLIC epix_shader)
target_link_libraries(epix_render PUBLIC Vulkan-Headers)
target_link_libraries(epix_render PUBLIC webgpu)

epix_add_module_subdir(epix_glfw_render glfw_render)
target_link_libraries(epix_glfw_render PUBLIC epix_core)
target_link_libraries(epix_glfw_render PUBLIC epix_window)
target_link_libraries(epix_glfw_render PUBLIC epix_glfw)
target_link_libraries(epix_glfw_render PUBLIC epix_render)
target_link_libraries(epix_glfw_render PUBLIC webgpu)

epix_add_module_subdir(epix_sfml_render sfml_render)
target_link_libraries(epix_sfml_render PUBLIC epix_core)
target_link_libraries(epix_sfml_render PUBLIC epix_window)
target_link_libraries(epix_sfml_render PUBLIC epix_sfml)
target_link_libraries(epix_sfml_render PUBLIC epix_render)
target_link_libraries(epix_sfml_render PUBLIC SFML::Window)
target_link_libraries(epix_sfml_render PUBLIC webgpu)

epix_add_module_subdir(epix_core_graph core_graph)
target_link_libraries(epix_core_graph PUBLIC epix_core)
target_link_libraries(epix_core_graph PUBLIC epix_transform)
target_link_libraries(epix_core_graph PUBLIC epix_render)

epix_add_module_subdir(epix_imgui imgui)
target_link_libraries(epix_imgui PUBLIC epix_core)
target_link_libraries(epix_imgui PUBLIC epix_render)
target_link_libraries(epix_imgui PUBLIC epix_window)
target_link_libraries(epix_imgui PUBLIC epix_glfw)
target_link_libraries(epix_imgui PUBLIC epix_input)
target_link_libraries(epix_imgui PUBLIC webgpu)
target_link_libraries(epix_imgui PUBLIC imgui)

# --- examples: auto-discover ---
# GLFW render examples (top-level .cpp files in examples/, excluding imgui*)
file(GLOB GLFW_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
list(FILTER GLFW_EXAMPLE_SOURCES EXCLUDE REGEX "imgui")
foreach(EXAMPLE_SRC IN LISTS GLFW_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render epix_core_graph)
endforeach()

# SFML render examples
file(GLOB_RECURSE SFML_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/sfml/*.cpp")
foreach(EXAMPLE_SRC IN LISTS SFML_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_sfml_render epix_core_graph)
endforeach()

# ImGui render examples
file(GLOB IMGUI_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/imgui*.cpp")
foreach(EXAMPLE_SRC IN LISTS IMGUI_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render epix_core_graph epix_imgui)
endforeach()

# WebGPU render examples
file(GLOB_RECURSE WEBGPU_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/webgpu/*.cpp")
foreach(EXAMPLE_SRC IN LISTS WEBGPU_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render webgpu glfw)
endforeach()
