epix_add_module_subdir(epix_render render)
target_link_libraries(epix_render PUBLIC epix_core)
target_link_libraries(epix_render PUBLIC epix_window)
target_link_libraries(epix_render PUBLIC epix_assets)
target_link_libraries(epix_render PUBLIC epix_image)
target_link_libraries(epix_render PUBLIC epix_transform)
target_link_libraries(epix_render PUBLIC epix_shader)
target_link_libraries(epix_render PUBLIC Vulkan-Headers)
target_link_libraries(epix_render PUBLIC webgpu)

epix_add_module_subdir(epix_glfw_render glfw_render)
target_link_libraries(epix_glfw_render PUBLIC epix_core)
target_link_libraries(epix_glfw_render PUBLIC epix_window)
target_link_libraries(epix_glfw_render PUBLIC epix_glfw)
target_link_libraries(epix_glfw_render PUBLIC epix_render)
target_link_libraries(epix_glfw_render PUBLIC webgpu)

epix_add_module_subdir(epix_sfml_render sfml_render)
target_link_libraries(epix_sfml_render PUBLIC epix_core)
target_link_libraries(epix_sfml_render PUBLIC epix_window)
target_link_libraries(epix_sfml_render PUBLIC epix_sfml)
target_link_libraries(epix_sfml_render PUBLIC epix_render)
target_link_libraries(epix_sfml_render PUBLIC SFML::Window)
target_link_libraries(epix_sfml_render PUBLIC webgpu)

epix_add_module_subdir(epix_core_graph core_graph)
target_link_libraries(epix_core_graph PUBLIC epix_core)
target_link_libraries(epix_core_graph PUBLIC epix_transform)
target_link_libraries(epix_core_graph PUBLIC epix_render)

epix_add_module_subdir(epix_imgui imgui)
target_link_libraries(epix_imgui PUBLIC epix_core)
target_link_libraries(epix_imgui PUBLIC epix_render)
target_link_libraries(epix_imgui PUBLIC epix_window)
target_link_libraries(epix_imgui PUBLIC epix_glfw)
target_link_libraries(epix_imgui PUBLIC epix_input)
target_link_libraries(epix_imgui PUBLIC webgpu)
target_link_libraries(epix_imgui PUBLIC imgui)

epix_add_module_subdir(epix_screenshot screen_shot)
target_link_libraries(epix_screenshot PUBLIC epix_render)
target_link_libraries(epix_screenshot PUBLIC epix_image)
target_link_libraries(epix_screenshot PUBLIC epix_assets)
target_link_libraries(epix_screenshot PUBLIC epix_core)
target_link_libraries(epix_screenshot PUBLIC epix_tasks)
target_link_libraries(epix_screenshot PUBLIC epix_input)
target_link_libraries(epix_screenshot PUBLIC webgpu)

if(EPIX_ENABLE_TEST)
# --- screenshot tests: auto-discover ---
file(GLOB_RECURSE SCREENSHOT_TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/screen_shot/tests/*.cpp")
foreach(TEST_SRC IN LISTS SCREENSHOT_TEST_SOURCES)
	file(RELATIVE_PATH TEST_REL "${CMAKE_CURRENT_SOURCE_DIR}/screen_shot/tests" "${TEST_SRC}")
	string(CONCAT TEST_NAME "test_screenshot_" "${TEST_REL}")
	string(REPLACE "/" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE "\\" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE ".cpp" "" TEST_NAME "${TEST_NAME}")

	add_executable(${TEST_NAME} "${TEST_SRC}")
	target_link_libraries(${TEST_NAME} PRIVATE epix_screenshot)
	target_link_libraries(${TEST_NAME} PRIVATE epix_render)
	target_link_libraries(${TEST_NAME} PRIVATE epix_core)
	target_link_libraries(${TEST_NAME} PRIVATE epix_image)
	target_link_libraries(${TEST_NAME} PRIVATE epix_assets)
	target_link_libraries(${TEST_NAME} PRIVATE epix_tasks)
	target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main)
	add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endforeach()
endif()

# --- examples: auto-discover ---
# GLFW render examples (top-level .cpp files in examples/, excluding imgui*)
file(GLOB GLFW_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
list(FILTER GLFW_EXAMPLE_SOURCES EXCLUDE REGEX "imgui")
foreach(EXAMPLE_SRC IN LISTS GLFW_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render epix_core_graph)
endforeach()

# SFML render examples
file(GLOB_RECURSE SFML_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/sfml/*.cpp")
foreach(EXAMPLE_SRC IN LISTS SFML_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_sfml_render epix_core_graph)
endforeach()

# ImGui render examples
file(GLOB IMGUI_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/imgui*.cpp")
foreach(EXAMPLE_SRC IN LISTS IMGUI_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render epix_core_graph epix_imgui)
endforeach()

# WebGPU render examples
file(GLOB_RECURSE WEBGPU_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/webgpu/*.cpp")
foreach(EXAMPLE_SRC IN LISTS WEBGPU_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_render_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render epix_glfw_render webgpu glfw)
endforeach()
