epix_add_module(epix_sprite)
target_link_libraries(epix_sprite PUBLIC epix_core)
target_link_libraries(epix_sprite PUBLIC epix_assets)
target_link_libraries(epix_sprite PUBLIC epix_image)
target_link_libraries(epix_sprite PUBLIC epix_transform)
target_link_libraries(epix_sprite PUBLIC epix_render)
target_link_libraries(epix_sprite PUBLIC epix_core_graph)
target_link_libraries(epix_sprite PUBLIC webgpu)

if (EPIX_ENABLE_TEST)
file(GLOB_RECURSE SPRITE_TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
foreach(TEST_SRC IN LISTS SPRITE_TEST_SOURCES)
	file(RELATIVE_PATH TEST_REL "${CMAKE_CURRENT_SOURCE_DIR}/tests" "${TEST_SRC}")
	string(CONCAT TEST_NAME "test_sprite_" "${TEST_REL}")
	string(REPLACE "/" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE "\\" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE ".cpp" "" TEST_NAME "${TEST_NAME}")

	add_executable(${TEST_NAME} "${TEST_SRC}")
	target_link_libraries(${TEST_NAME} PRIVATE epix_sprite)
	if (TEST_REL MATCHES "^visual/" OR TEST_REL MATCHES "^(basic|pressure)\\.cpp$")
		target_link_libraries(${TEST_NAME} PRIVATE epix_glfw epix_glfw_render epix_input)
	else()
		target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main)
		add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
	endif()
endforeach()
endif()