epix_add_module(epix_sprite)
target_link_libraries(epix_sprite PUBLIC epix_core)
target_link_libraries(epix_sprite PUBLIC epix_assets)
target_link_libraries(epix_sprite PUBLIC epix_image)
target_link_libraries(epix_sprite PUBLIC epix_transform)
target_link_libraries(epix_sprite PUBLIC epix_render)
target_link_libraries(epix_sprite PUBLIC epix_core_graph)
target_link_libraries(epix_sprite PUBLIC webgpu)

if (EPIX_ENABLE_TEST)
# --- examples: auto-discover ---
file(GLOB_RECURSE SPRITE_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
foreach(EXAMPLE_SRC IN LISTS SPRITE_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_sprite_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_sprite)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_glfw epix_glfw_render epix_input)
endforeach()
endif()