epix_add_module(epix_text)
target_link_libraries(epix_text PUBLIC epix_core)
target_link_libraries(epix_text PUBLIC epix_assets)
target_link_libraries(epix_text PUBLIC epix_image)
target_link_libraries(epix_text PUBLIC epix_transform)
target_link_libraries(epix_text PUBLIC epix_mesh)
target_link_libraries(epix_text PRIVATE freetype)
target_link_libraries(epix_text PRIVATE harfbuzz)

if (EPIX_ENABLE_TEST)
file(GLOB_RECURSE TEXT_TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
foreach(TEST_SRC IN LISTS TEXT_TEST_SOURCES)
	file(RELATIVE_PATH TEST_REL "${CMAKE_CURRENT_SOURCE_DIR}/tests" "${TEST_SRC}")
	string(CONCAT TEST_NAME "test_text_" "${TEST_REL}")
	string(REPLACE "/" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE "\\" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE ".cpp" "" TEST_NAME "${TEST_NAME}")

	add_executable(${TEST_NAME} "${TEST_SRC}")
	target_link_libraries(${TEST_NAME} PRIVATE epix_text)
	target_link_libraries(${TEST_NAME} PRIVATE epix_sprite)
	target_link_libraries(${TEST_NAME} PRIVATE epix_mesh)
	if (TEST_REL MATCHES "^visual/" OR TEST_REL MATCHES "^font_image\\.cpp$")
		target_link_libraries(${TEST_NAME} PRIVATE epix_window epix_input epix_glfw epix_glfw_render epix_core_graph)
	else()
		target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main)
		add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
	endif()
endforeach()
endif()