epix_add_module_subdir(epix_window window)
target_link_libraries(epix_window PUBLIC epix_core)
target_link_libraries(epix_window PUBLIC epix_input)
target_link_libraries(epix_window PUBLIC epix_assets)
target_link_libraries(epix_window PUBLIC epix_image)

epix_add_module_subdir(epix_glfw glfw)
target_link_libraries(epix_glfw PUBLIC epix_core)
target_link_libraries(epix_glfw PUBLIC epix_window)
target_link_libraries(epix_glfw PUBLIC epix_input)
target_link_libraries(epix_glfw PUBLIC epix_assets)
target_link_libraries(epix_glfw PUBLIC epix_image)
target_link_libraries(epix_glfw PUBLIC glfw)

epix_add_module_subdir(epix_sfml sfml)
target_link_libraries(epix_sfml PUBLIC epix_core)
target_link_libraries(epix_sfml PUBLIC epix_window)
target_link_libraries(epix_sfml PUBLIC epix_input)
target_link_libraries(epix_sfml PUBLIC epix_assets)
target_link_libraries(epix_sfml PUBLIC epix_image)
target_link_libraries(epix_sfml PUBLIC SFML::Window)

## --- examples: auto-discover ---
# GLFW examples
file(GLOB_RECURSE GLFW_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/glfw/*.cpp")
foreach(EXAMPLE_SRC IN LISTS GLFW_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_window_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_window)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_glfw)
endforeach()

# SFML examples
file(GLOB_RECURSE SFML_EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/sfml/*.cpp")
foreach(EXAMPLE_SRC IN LISTS SFML_EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_window_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_window)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_sfml)
endforeach()
