if(UNIX AND NOT APPLE)
	find_package(X11 REQUIRED COMPONENTS Xrandr)
endif()

epix_add_module_subdir(epix_window window)
target_link_libraries(epix_window PUBLIC epix_core)
target_link_libraries(epix_window PUBLIC epix_input)
target_link_libraries(epix_window PUBLIC epix_assets)
target_link_libraries(epix_window PUBLIC epix_image)

epix_add_module_subdir(epix_glfw glfw)
target_link_libraries(epix_glfw PUBLIC epix_core)
target_link_libraries(epix_glfw PUBLIC epix_window)
target_link_libraries(epix_glfw PUBLIC epix_input)
target_link_libraries(epix_glfw PUBLIC epix_assets)
target_link_libraries(epix_glfw PUBLIC epix_image)
target_link_libraries(epix_glfw PUBLIC glfw)

epix_add_module_subdir(epix_sfml sfml)
target_link_libraries(epix_sfml PUBLIC epix_core)
target_link_libraries(epix_sfml PUBLIC epix_window)
target_link_libraries(epix_sfml PUBLIC epix_input)
target_link_libraries(epix_sfml PUBLIC epix_assets)
target_link_libraries(epix_sfml PUBLIC epix_image)
target_link_libraries(epix_sfml PUBLIC SFML::Window)
if(UNIX AND NOT APPLE)
	target_link_libraries(epix_sfml PRIVATE X11::X11 X11::Xrandr)
endif()

epix_add_examples(window_glfw EXAMPLES_DIR examples/glfw LINK_LIBS epix_window epix_glfw)
epix_add_examples(window_sfml EXAMPLES_DIR examples/sfml LINK_LIBS epix_window epix_sfml)
